fixed text jumping

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -726,7 +726,16 @@ h6
                     &_body
                         color: #B5B6B6
                         margin-top: 10px
+                    &_img_wrapper
+                        width: 52px
+                        height: 52px
+                        @media (max-width: 550px)
+                            width: 32px
+                            height: 32px
+
                     &_img
+                        width: 52px
+                        height: 52px
                         @media (max-width: 550px)
                             width: 32px
                             height: 32px
@@ -1076,6 +1085,14 @@ h6
                 @media (max-width: 450px)
                     width: 47.9%
                 &_img
+                    width: 44px
+                    height: 44px
+                    @media (max-width: 450px)
+                        width: 32px
+                        height: 32px
+                &_img_wrapper
+                    width: 44px
+                    height: 44px
                     @media (max-width: 450px)
                         width: 32px
                         height: 32px
